refined the survey section; fixed alignment of ol versus ul

--- a/my-style.css
+++ b/my-style.css
@@ -20,3 +20,8 @@
     background-color: #9c9491;
     color: #000;
 }
+
+ul {
+    padding-left: 40px;
+    padding-top: 0;
+}
